--- a/public/timer-page.html
+++ b/public/timer-page.html
@@ -61,14 +61,15 @@
       description.value = "";
       console.log(task);
       domCreate(task, document.getElementById("Task"));
+      startTimer()
     }
     var time;
     function startTimer() {
       if (task.time != "" && task.time != undefined) {
         if (task.timer == 0) { time = task.time; task.timer = 1; }
         else if (document.getElementById("Time").innerText != null) time = document.getElementById("Time").innerText;
-        if (document.getElementById("Time").innerText == "Success") { return; }
-        if (document.getElementById("Time").innerText == "Cancel") { return; }
+        if (document.getElementById("Time").innerText == "Success") {document.getElementById("Time").innerText="TIME"; return;}
+        if (document.getElementById("Time").innerText == "Cancel") { document.getElementById("Time").innerText="TIME"; return;}
         var arr = time.split(":");
         var h = arr[0];
         var m = arr[1];
@@ -162,8 +163,6 @@
     </div>
 
   </table>
-  <script>
-    startTimer();
 
   </script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
