Change color for cancel and success

--- a/public/timer-page.html
+++ b/public/timer-page.html
@@ -133,7 +133,7 @@
       var timer = document.getElementById("Time");
       var button = document.getElementById("Success");
       var color = document.getElementById("Success").parentNode.parentNode;
-      color.style.backgroundColor = "red"
+      color.style.backgroundColor = "#F08080"
       button.parentNode.removeChild(button);
       var button = document.getElementById("Cancel");
       button.parentNode.removeChild(button);
@@ -143,7 +143,7 @@
       var timer = document.getElementById("Time");
       var button = document.getElementById("Success");
       var color = document.getElementById("Success").parentNode.parentNode;
-      color.style.backgroundColor = "green"
+      color.style.backgroundColor = "#90EE90"
       button.parentNode.removeChild(button);
       var button = document.getElementById("Cancel");
       button.parentNode.removeChild(button);
@@ -155,15 +155,7 @@
     <p class="Time">TIME</p>
   </div>
   <br>
-  <table id="Task" style="margin:auto; width:70%; ">
-    <div id="TaskDiv" class="CurrentTask">
-      <!-- <a><button>Cancel task</button></a>
-     <a></a>
-     <a></a>
-     <a><button>Success task</button></a> -->
-    </div>
-
-  </table>
+  <table id="Task" style="margin:auto; width:70%; "></table>
 
   </script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
